# my-assistant

./: README.md  pyproject.toml
my_assistant/: chat_assistant.py  main.py  speech_listener.py  text_to_speech_player.py  utils.py
my_assistant/tests/: test_chat_assistant.py  test_utils.py
