[tool.poetry]
name = "my-assistant"
version = "0.1.0"
description = ""
authors = ["bunhojun <ponnponn.p@gmail.com>"]
readme = "README.md"
packages = [{ include = "my_assistant" }]

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.4.6"
speechrecognition = "^3.10.0"
numpy = "^1.24.3"
openai = "^0.27.6"
langchain = "^0.0.160"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
gtts = "^2.3.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.4"
ruff = "^0.0.262"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
